--- a/package.json
+++ b/package.json
@@ -48,9 +48,11 @@
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "moment": "^2.30.1",
     "next": "16.0.0",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
+    "react-big-calendar": "^1.15.0",
     "react-day-picker": "9.8.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.60.0",
